test_suite/alan-2022-examples/failing/001500_mutation.alan
source q4T2a begin call N608a(32, 52710 and) end
